Easy spaces/main/default/objects/Candidate__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <inlineHelpText>Please enter your Alternate Email Address</inlineHelpText>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>