Easy spaces/main/default/objects/Candidate__c/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <inlineHelpText>Please enter your alternate phone number</inlineHelpText>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>