Easy spaces/main/default/objects/Candidate__c/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <displayFormat>CID-{0000}</displayFormat>
    <inlineHelpText>Please Enter Valid ID</inlineHelpText>
    <label>Candidate ID</label>
    <type>AutoNumber</type>
</CustomField>