Easy spaces/main/default/objects/Candidate__c/fields/Current_Employed__c.field-meta.xml
<CustomField>
    <fullName>Current_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please enter your Current Employed</inlineHelpText>
    <label>Current Employed</label>
    <type>Checkbox</type>
</CustomField>