Easy spaces/main/default/objects/Candidate__c/fields/Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer__c</fullName>
    <inlineHelpText>Please enter your Current Employer</inlineHelpText>
    <label>Current Employer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>