Easy spaces/main/default/objects/Candidate__c/fields/Experience_in_Years__c.field-meta.xml
<CustomField>
    <fullName>Experience_in_Years__c</fullName>
    <inlineHelpText>Please enter your Experience in Years</inlineHelpText>
    <label>Experience in Years</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>