Easy spaces/main/default/objects/Candidate__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <inlineHelpText>Please Enter your First Name</inlineHelpText>
    <label>First Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>