Easy spaces/main/default/objects/Candidate__c/fields/Highest_Educational_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Highest_Educational_Qualification__c</fullName>
    <label>Highest Educational Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>PHD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>