Easy spaces/main/default/objects/Candidate__c/fields/Identity_Document_No__c.field-meta.xml
<CustomField>
    <fullName>Identity_Document_No__c</fullName>
    <inlineHelpText>Please enter your Identity Document Number</inlineHelpText>
    <label>Identity Document No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>