Easy spaces/main/default/objects/Candidate__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <inlineHelpText>Please enter your Last Name</inlineHelpText>
    <label>Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>