Easy spaces/main/default/objects/Candidate__c/fields/Notice_period_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_period_in_Days__c</fullName>
    <inlineHelpText>Please enter your notice period in days</inlineHelpText>
    <label>Notice period in Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>