Easy spaces/main/default/objects/Candidate__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>Please enter your 10 digit Phone Number</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>