Easy spaces/main/default/objects/Candidate__c/fields/Postal_or_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Postal_or_ZipCode__c</fullName>
    <inlineHelpText>Please enter your postal or Zip Code</inlineHelpText>
    <label>Postal or ZipCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>