Easy spaces/main/default/objects/Candidate__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Please Enter your State</inlineHelpText>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>