Easy spaces/main/default/objects/Candidate__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <inlineHelpText>Please enter your  Street Address</inlineHelpText>
    <label>Street</label>
    <length>30</length>
    <type>Text</type>
</CustomField>